fix: JEI-related client crash with invalid task items